--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<script type="text/javascript">window.location.href="https://deriq-qian-dong.github.io/";</script>
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="UTF-8">
+		<title>新域名 https://deriq-qian-dong.github.io/</title>
+	</head>
+	<body>
+		<p>跳转中，访问新域名站点<a href="https://deriq-qian-dong.github.io/" target="_blank">https://deriq-qian-dong.github.io/</a></p>
+	</body>
+  <script type="text/javascript">window.location.href="https://deriq-qian-dong.github.io/";</script>
+</html>
+
