--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>新域名 https://deriq-qian-dong.github.io/</title>
+		<title>新域名 http://dongqian.bj.cn/</title>
 	</head>
 	<body>
-		<p>跳转中，访问新域名站点<a href="https://deriq-qian-dong.github.io/" target="_blank">https://deriq-qian-dong.github.io/</a></p>
+		<p>跳转中，访问新域名站点<a href="http://dongqian.bj.cn/" target="_blank">http://dongqian.bj.cn/</a></p>
 	</body>
-  <script type="text/javascript">window.location.href="https://deriq-qian-dong.github.io/";</script>
+  <script type="text/javascript">window.location.href="http://dongqian.bj.cn/";</script>
 </html>
 
